infra/k8s/comments-api-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-api-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments-api
  template:
    metadata:
      labels:
        app: comments-api
    spec:
      containers:
        - name: comments-api
          image: blog/comments-api
---
apiVersion: v1
kind: Service
metadata:
  name: comments-api-srv
spec:
  selector:
    app: comments-api
  ports:
    - name: comments-api
      protocol: TCP
      port: 4001
      targetPort: 4001
